--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,24 @@
-
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.Box{
+    border:1px solid white;
+    background:black;
+    margin: 10px 10px;
+    min-height: 80px;
+    min-width: 60px;
+    color: white;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    display:flex;
+}
+.Container{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+h1{
+    color:white;
+}
+body{
+    background: black;
+}
